--- a/src/styles/GoalBar.css
+++ b/src/styles/GoalBar.css
@@ -1,18 +1,17 @@
 .progress-bar-wrapper {
   display: flex;
-  justify-content: center;
-  padding: 10px 0;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  max-width: 400px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .goal-bar-container {
   position: relative; /* Establish a positioning context for child elements */
   width: 100%; /* Ensure the bars span the container width */
   height: 5px; /* Ensure the container matches the bar height */
-  max-width: 400px;
+  border-radius: 20px;
+  max-width: 340px;
+  min-width: 250px;
   margin: 10px 0; /* Optional: Add spacing */
 }
 
