--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(to bottom, #ffffff, #dbffde);
+  background: linear-gradient(to bottom, #ffffff, #673ab7);
 }
 
 .progress-bar-wrapper,
