--- a/src/styles/GoalBar.css
+++ b/src/styles/GoalBar.css
@@ -41,10 +41,12 @@
   display: flex;
   justify-content: space-between;
   margin-top: 2%;
+  z-index: 2;
   font-size: 1.2em
 }
 
 .goal-text-left,
 .goal-text-right {
   color: #777;
+  z-index: 2;
 }
