changing the background color

--- a/src/styles/SwitchToggle.css
+++ b/src/styles/SwitchToggle.css
@@ -20,8 +20,8 @@
 
 /* White Block Button Styles */
 .white-block .button {
-  background-color: #e3f5e6;
-  border: 2px solid #e3f5e6;
+  background-color: #E3F5E6;
+  border: 2px solid #E3F5E6;
   color: #77768a;
   border-radius: 12px;
   padding: 10px;
