--- a/src/styles/AffirmationTopics.css
+++ b/src/styles/AffirmationTopics.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #e3f5e6;
+    background-color: #F0FBF4;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -41,8 +41,8 @@ body {
 }
 
 .icon {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
