--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,19 @@
   justify-content: space-between;
   align-items: center;
   height: 100vh;
-  background: #f0fbf4;
+  background: #f0fbf4; /* Fallback background in case the video doesn't load */
+  position: relative; /* To contain the absolutely positioned video */
+  overflow: hidden; /* Ensures the video doesn't spill outside the container */
+}
+
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the video fills the entire container */
+  z-index: -1; /* Places the video behind the other content */
 }
 
 .progress-bar-wrapper,
@@ -12,6 +24,7 @@
 .nav-bar-wrapper {
   width: 100%;
   text-align: center;
+  z-index: 1; /* Ensures content is above the video */
 }
 
 .nav-bar-wrapper {
@@ -21,6 +34,7 @@
 
 .border-wrapper {
   height: 100vh;
+  z-index: 1; /* Ensure this wrapper is above the video */
 }
 
 .quote-area-wrapper {
@@ -29,11 +43,12 @@
   justify-content: center; /* Horizontally centers content within itself */
   width: 100%;
   text-align: center;
-  margin-top: 80px;
+  z-index: 1; /* Ensures the text is above the video */
 }
 
 .progress-bar-wrapper {
   margin-top: 20px; /* Adjusts space from the top */
+  z-index: 1; /* Ensures the progress bar is above the video */
 }
 
 @media (max-width: 768px) {
