--- a/src/styles/GoalBar.css
+++ b/src/styles/GoalBar.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
 
 .goal-bar-container {
