--- a/src/styles/Tabs.css
+++ b/src/styles/Tabs.css
@@ -1,23 +1,32 @@
 .tabs-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 10px; /* Adds space between the tabs */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px; /* Adds space between the tabs */
+  z-index: 1; /* Keeps it above any background content */
+  width: 100%; /* Ensures it spans the full width of the parent */
+  margin-left: 10px;
+}
+
+.tab {
+  font-size: 24px;
+  font-weight: bold;
+  position: relative;
+}
+
+.tab::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  margin-top: 5px;
+}
+
+/* Responsive design adjustments */
+@media (max-width: 400px) {
+  .tabs-container {
+    margin-top: 70px;
   }
-  
-  .tab {
-    font-size: 20px;
-    font-weight: bold;
-    position: relative;
-  }
-  
-  .tab::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: black;
-    margin-top: 5px;
-  }
-  
+}
