--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -70,3 +70,9 @@ input {
   font-size: 12px;
   margin-top: 10px;
 }
+
+.accent {
+  background: linear-gradient(to right, #673ab7, #d0c439); /* Replace with your preferred colors */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
