--- a/src/styles/Onboarding.css
+++ b/src/styles/Onboarding.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: linear-gradient(#daf2de, white); /* Updated gradient */
   color: #333333;
   min-width: 250px;
   max-width: 380px;
@@ -55,6 +54,11 @@
 
 .fade-out {
   opacity: 0;
+}
+
+.fade-out-container {
+  opacity: 0;
+  transition: opacity 2s ease-in-out; /* Adjust duration as needed */
 }
 
 ul {
